--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
         <!-- Spring -->
         <spring-io-platform.version>2.0.3.RELEASE</spring-io-platform.version>
-        <spring-data-jdbc.version>1.1.0.RELEASE</spring-data-jdbc.version>
+        <spring-data-jdbc.version>2.0.0.M1</spring-data-jdbc.version>
 
 
         <!-- Java EE / Java SE dependencies -->
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jdbc-core</artifactId>
-            <version>${spring-data-jdbc.version}</version>
+            <version>1.0.0.RELEASE</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
